<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.rubik.applogincard.Activity.RegisterActivity">

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="30dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">

         <ImageView android:src="@drawable/header9"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:scaleType="fitXY"

             />
     </LinearLayout>-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="#347c776e" >

        <EditText
            android:id="@+id/txtName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/txtRegister_bg"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/txtRegister"
            android:textColorHint="@color/txtRegisterHint"
            android:textSize="@dimen/txtResgister"/>

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/txtRegister_bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/txtRegister"
            android:textColorHint="@color/txtRegisterHint"
            android:textSize="@dimen/txtResgister"
            />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/txtRegister_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/txtRegister"
            android:textColorHint="@color/txtRegisterHint"
            android:textSize="@dimen/txtResgister"/>

        <EditText
            android:id="@+id/txtPass2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/txtRegister_bg"
            android:hint="@string/hint_password2"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/txtRegister"
            android:textColorHint="@color/txtRegisterHint"
            android:textSize="@dimen/txtResgister"
            />

        <CheckBox
            android:id="@+id/chkPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk"
            android:textColor="@color/white"
            />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#efeaab4c"
            android:text="@string/btnRegister"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btnToLogin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>

