<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    android:padding="10dp"
    android:gravity="center"
    tools:context="com.rubik.applogincard.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

       <!-- <ImageView android:src="@drawable/header_green"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY" />-->

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/txtLogin"
            android:textColorHint="@color/txtLoginHint"
            />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/txtLogin"
            android:textColorHint="@color/txtLoginHint"
            />

        <CheckBox
            android:id="@+id/chkPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chk"
            android:textColor="@android:color/black"
            />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/btnLogin"
            android:background="@color/btnLogin_bg"
            android:textColor="@color/btnLogin"
            android:textSize="16sp"
            />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnToRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/btnToRegister_bg"
            android:text="@string/btnToRegister"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            />

    </LinearLayout>

</LinearLayout>

